force-app/main/default/objects/REST_Service_Calls__c/REST_Service_Calls__c.object-meta.xml
<CustomObject>
    <label>REST Service Calls</label>
    <nameField>
        <label>REST Service Call Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REST Service Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>