force-app/main/default/objects/REST_Service_Calls__c/fields/Request_Method__c.field-meta.xml
<CustomField>
    <fullName>Request_Method__c</fullName>
    <label>Request Method</label>
    <length>16</length>
    <type>Text</type>
</CustomField>