force-app/main/default/objects/REST_Service_Calls__c/fields/Service_Action__c.field-meta.xml
<CustomField>
    <fullName>Service_Action__c</fullName>
    <label>Service Action</label>
    <length>64</length>
    <type>Text</type>
</CustomField>